<resources>
    <string name="app_name">Notes Buddy</string>
    <string name="sem_8">Sem 8</string>
    <string name="sem_7">Sem 7</string>
    <string name="sem_6">Sem 6</string>
    <string name="sem_5">Sem 5</string>
    <string name="sem_4">Sem 4</string>
    <string name="sem_3">Sem 3</string>
    <string name="sem_2">Sem 2</string>
    <string name="sem_1">Sem 1</string>
    <string name="m3">M3</string>
    <string name="computer_organization">Computer Organization</string>
    <!-- <string name="analog_amp_digital_electronics">
        <![CDATA[Analog & Digital Electronics]]></string>-->
    <string name="control_systems">Control Systems</string>
    <string name="mechanics_of_materials">Mechanics of materials</string>
    <string name="material_science_amp_technology"><![CDATA[Material science & Technology]]></string>
    <string name="m4">M4</string>
    <string name="fluid_mechanics_amp_machines"><![CDATA[Fluid mechanics & machines]]></string>
    <string name="microcontroller">Microcontroller</string>
    <string name="manufacturing_technology">Manufacturing technology</string>
    <string name="theory_of_machines">Theory of Machines</string>
    <string name="instrumentation_amp_measurements"><![CDATA[Instrumentation & measurements]]></string>
    <string name="wireless_networks_amp_communication"><![CDATA[Wireless Networks & Communication]]></string>
    <string name="micro_amp_smart_systems_technology"><![CDATA[Micro & Smart Systems Technology]]></string>
    <string name="hydraulics_amp_pneumatics"><![CDATA[Hydraulics & Pneumatics]]></string>
    <!-- <string name="virtual_instrumentation">Virtual Instrumentation</string>-->
    <string name="design_amp_analysis_of_machine_elements"><![CDATA[Design & analysis of Machine Elements]]></string>
    <string name="technological_innovation_management_amp_entrepreneurship"><![CDATA[Technological Innovation Management & Entrepreneurship]]></string>
    <!--<string name="plc_amp_scada"><![CDATA[PLC & SCADA]]></string>-->
    <string name="power_electronics">Power Electronics</string>
    <string name="computer_aided_machine_drawing">Computer Aided Machine Drawing</string>
    <string name="industrial_robotics">Industrial Robotics</string>
    <string name="thermal_engineering">Thermal Engineering</string>
    <string name="automotive_electronics_amp_hybrid_vehicles"><![CDATA[Automotive Electronics & Hybrid Vehicles]]></string>
    <string name="select_your_sem">Select Your sem</string>
    <string name="select_the_sem_to_upload">Select The Sem To Upload</string>
    <string name="machine_shop_amp_material_testing"><![CDATA[Machine shop & material testing]]></string>
    <string name="analog_amp_digital_electronics"><![CDATA[Analog & Digital Electronics]]></string>
    <string name="fm_amp_pneumatic"><![CDATA[FM & pneumatic]]></string>
    <string name="virtual_instrumentation">Virtual Instrumentation</string>
    <string name="msst">MSST</string>
    <string name="plc_amp_scada"><![CDATA[PLC & SCADA]]></string>
    <string name="robotics">Robotics</string>
    <string name="thermal">Thermal</string>
    <string name="lab">Lab</string>
    <string name="q_p">Q.P</string>
    <string name="m_p">M.P</string>
    <string name="syl">Syl</string>
</resources>