<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bitmojibg"
    android:layout_height="match_parent"
    tools:context=".uploadsem3">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/m3"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/m3"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/ms"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/material_science_amp_technology"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/mo"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/mechanics_of_materials"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/cs"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/control_systems"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/ad"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/analog_amp_digital_electronics"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/co"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/computer_organization"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sem_3"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cloud_upload" />


</androidx.constraintlayout.widget.ConstraintLayout>