<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sem5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_manipulator" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ti"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/technological_innovation_management_amp_entrepreneurship"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/da"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/design_amp_analysis_of_machine_elements"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/vi"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/virtual_instrumentation"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/hp"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/hydraulics_amp_pneumatics"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/ms"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/micro_amp_smart_systems_technology"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/wn"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/wireless_networks_amp_communication"
                android:textAllCaps="false"
                android:textColor="#fff" />






        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sem_5"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>