<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/login"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/upload"
        android:focusable="true" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sem3"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/sem_3"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/sem4"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/sem_4"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/sem5"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/sem_5"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/sem6"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/sem_6"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/sem7"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/sem_7"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/sem8"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/sem_8"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_sem"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_manipulator" />










</androidx.constraintlayout.widget.ConstraintLayout>