<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bitmojibg"
    android:layout_height="match_parent"
    tools:context=".uploadsem6">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cloud_upload" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plc"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/plc_amp_scada"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/pe"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/power_electronics"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/camd"
                android:layout_width="125dp"
                android:layout_height="225dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonblackbg"
                android:text="@string/computer_aided_machine_drawing"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sem_6"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>